# autotag-metadata

./: .gitignore  README.md  autotag-metadata.spec  environment-dev.yml  environment.yml  pyproject.toml  requirements.txt  rthook_distlib.py  setup.cfg
.github/: dependabot.yml
.github/workflows/: build-linux-exe.yml  build-macos-exe.yml  build-windows-exe.yml  build-windows.yml  create-windows-installer.yml  doc.yml  lint.yaml  pyinstaller-windows.yml  release.yml  test.yml
autotag_metadata/: __main__.py  app.py  config.py  desktop-app.json  file_handling.py
autotag_metadata/core/: metadata_writer.py  yaml_document.py  yaml_utils.py
autotag_metadata/ui/: drop_overlay.py  editable_list.py  label_dropzone.py  labeldropzone.py  library_panel.py  logger.py  main_window.ui  mycombobox.py  mylineedit.py  qplaintexteditlogger.py  snippets_list.py  template_dialog.py  template_dialog.ui  templatetree.py  tour.py  yaml_form_view.py  yaml_highlighter.py  yaml_multi_view.py  yaml_multiview.py  yaml_text_edit.py  yamltextedit.py  zoom_panels.py  zoom_view.py
doc/: .gitignore  README.md  conf.py  index.md  installation.md  usage.md
docs/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_sources/: installation.md.txt
docs/_static/: documentation_options.js
helpers/: generate_icon.sh
installer/: autotag-metadata-gui.wxi  autotag-metadata-gui.wxs
tests/: conftest.py  test_config.py  test_file_handling.py  test_integration.py  test_metadata_writer.py  test_templatetree.py  test_yaml_document.py  test_yaml_utils.py
